traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:4: error: not found: value ecritmessage
    ecritmessage(cpt)
    ^